# CelesteAutosplitterCore

./: Cargo.toml  LICENSE  README.md
asl/src/: asl.rs
src/: game_types.rs  lib.rs
