[package]
name = "celeste-auto-splitter"
version = "0.1.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]
edition = "2018"

[dependencies]
asl = { path = "asl" }
plain = "0.2.3"
parking_lot = { version = "0.7.1", features = ["nightly"] }
wstr = "0.2.0"

[lib]
name = "celeste"
crate-type = ["cdylib"]

[profile.release]
lto = true
panic = "abort"
