[package]
name = "celeste_autosplitter"
version = "0.1.0"
authors = ["Audrey Dutcher <audrey@rhelmot.io>"]
edition = "2021"

[dependencies]
asr = { git = "https://github.com/LiveSplit/asr", features = ["integer-vars", "unity", "derive"] }
bytemuck = "1.13.1"
static_locks = "0.1.0"
wstr = "0.2.0"

[lib]
name = "celeste_autosplitter"
crate-type = ["cdylib"]

[profile.release]
lto = true
